--- a/companion/src/simulatordialog.ui
+++ b/companion/src/simulatordialog.ui
@@ -27,7 +27,7 @@
   </property>
   <property name="windowIcon">
    <iconset resource="companion.qrc">
-    <normaloff>:/images/simulate.png</normaloff>:/images/simulate.png</iconset>
+    <normaloff>:/icon.png</normaloff>:/icon.png</iconset>
   </property>
   <layout class="QGridLayout" name="gridLayout_6">
    <property name="margin">
@@ -1092,8 +1092,6 @@ QPushButton:checked {
            </property>
           </widget>
          </item>
-
-
          <item row="0" column="4" rowspan="3">
           <widget class="menuWidget" name="menu" native="true">
            <property name="sizePolicy">
@@ -1812,8 +1810,6 @@ QPushButton:checked {
            <property name="frameShadow">
             <enum>QFrame::Raised</enum>
            </property>
-
-
            <property name="lineWidth">
             <number>2</number>
            </property>
@@ -2298,7 +2294,6 @@ border-radius: 4px;
          </item>
          <item row="0" column="0">
           <widget class="QLabel" name="label_ch01">
-
            <property name="sizePolicy">
             <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
              <horstretch>0</horstretch>
