--- a/companion/src/burndialog.ui
+++ b/companion/src/burndialog.ui
@@ -26,8 +26,8 @@
    <string>Customize Splash</string>
   </property>
   <property name="windowIcon">
-   <iconset>
-    <normaloff>:/images/c_home.png</normaloff>:/images/c_home.png</iconset>
+   <iconset resource="companion.qrc">
+    <normaloff>:/icon.png</normaloff>:/icon.png</iconset>
   </property>
   <layout class="QGridLayout" name="gridLayout_7">
    <item row="1" column="0">
@@ -454,10 +454,6 @@
             </property>
             <property name="text">
              <string>...</string>
-            </property>
-            <property name="icon">
-             <iconset resource="companion.qrc">
-              <normaloff>:/images/library.png</normaloff>:/images/library.png</iconset>
             </property>
             <property name="iconSize">
              <size>
