--- a/companion/src/companion.qrc
+++ b/companion/src/companion.qrc
@@ -1,5 +1,6 @@
 <RCC>
   <qresource prefix="/">
+    <file>images/customize.png</file>
     <file>icon.png</file>
     <file>../../CREDITS.txt</file>
     <file>../../DONATIONS.txt</file>
