--- a/companion/src/customizesplashdialog.ui
+++ b/companion/src/customizesplashdialog.ui
@@ -20,8 +20,8 @@
    <string>Customize Splash</string>
   </property>
   <property name="windowIcon">
-   <iconset>
-    <normaloff>:/images/c_home.png</normaloff>:/images/c_home.png</iconset>
+   <iconset resource="companion.qrc">
+    <normaloff>:/icon.png</normaloff>:/icon.png</iconset>
   </property>
   <layout class="QGridLayout" name="gridLayout_2">
    <item row="0" column="0">
@@ -210,10 +210,6 @@ p, li { white-space: pre-wrap; }
        </property>
        <property name="text">
         <string>...</string>
-       </property>
-       <property name="icon">
-        <iconset resource="companion.qrc">
-         <normaloff>:/images/library.png</normaloff>:/images/library.png</iconset>
        </property>
        <property name="iconSize">
         <size>
