--- a/companion/src/xsimulatordialog.ui
+++ b/companion/src/xsimulatordialog.ui
@@ -27,7 +27,7 @@
   </property>
   <property name="windowIcon">
    <iconset resource="companion.qrc">
-    <normaloff>:/images/simulate.png</normaloff>:/images/simulate.png</iconset>
+    <normaloff>:/icon.png</normaloff>:/icon.png</iconset>
   </property>
   <layout class="QGridLayout" name="gridLayout_6">
    <property name="margin">
@@ -2053,8 +2053,6 @@ border-radius: 4px;
              <width>16777215</width>
              <height>18</height>
             </size>
-
-
            </property>
            <property name="styleSheet">
             <string notr="true">QSlider::sub-page:horizontal:disabled {
