--- a/companion/src/preferencesdialog.ui
+++ b/companion/src/preferencesdialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>685</width>
-    <height>766</height>
+    <height>764</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -35,6 +35,79 @@
    <property name="margin">
     <number>4</number>
    </property>
+   <item row="3" column="1" colspan="4">
+    <layout class="QHBoxLayout" name="horizontalLayout_10">
+     <item>
+      <widget class="QLineEdit" name="backupPath">
+       <property name="readOnly">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="backupPathButton">
+       <property name="text">
+        <string>Open Folder</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QCheckBox" name="backupEnable">
+       <property name="text">
+        <string>auto backup before write</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item row="1" column="0">
+    <widget class="QLabel" name="label_4">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="text">
+      <string>Show Splash At Start</string>
+     </property>
+    </widget>
+   </item>
+   <item row="16" column="1" colspan="4">
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QCheckBox" name="joystickChkB">
+       <property name="text">
+        <string>Enable</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QComboBox" name="joystickCB">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="joystickcalButton">
+       <property name="text">
+        <string>Calibrate</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item row="3" column="0">
+    <widget class="QLabel" name="label_17">
+     <property name="text">
+      <string>Automatic Backup Folder</string>
+     </property>
+    </widget>
+   </item>
    <item row="2" column="1" colspan="4">
     <layout class="QHBoxLayout" name="horizontalLayout_4">
      <item>
@@ -78,14 +151,14 @@
      </item>
     </layout>
    </item>
-   <item row="4" column="0" colspan="5">
+   <item row="6" column="0" colspan="5">
     <widget class="Line" name="line">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
     </widget>
    </item>
-   <item row="13" column="0">
+   <item row="15" column="0">
     <widget class="QLabel" name="label_3">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
@@ -101,31 +174,7 @@
      </property>
     </widget>
    </item>
-   <item row="0" column="3" colspan="2">
-    <layout class="QHBoxLayout" name="horizontalLayout_7" stretch="0,0">
-     <item>
-      <widget class="QCheckBox" name="startupCheck_companion9x">
-       <property name="text">
-        <string>Check for updates on startup</string>
-       </property>
-       <property name="checked">
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QCheckBox" name="startupCheck_fw">
-       <property name="text">
-        <string>Check for selected Fw updates</string>
-       </property>
-       <property name="checked">
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </item>
-   <item row="5" column="4" rowspan="7">
+   <item row="7" column="4" rowspan="7">
     <layout class="QGridLayout" name="gridLayout_3" columnstretch="0,0">
      <item row="0" column="0" colspan="2">
       <widget class="QLabel" name="imageLabel">
@@ -180,17 +229,14 @@
      </item>
     </layout>
    </item>
-   <item row="0" column="1" colspan="2">
-    <widget class="QComboBox" name="locale_QB"/>
-   </item>
-   <item row="13" column="2" colspan="2">
+   <item row="15" column="2" colspan="2">
     <widget class="QCheckBox" name="simuSW">
      <property name="text">
       <string>Remember switches in simulator</string>
      </property>
     </widget>
    </item>
-   <item row="13" column="1">
+   <item row="15" column="1">
     <widget class="QComboBox" name="backLightColor">
      <item>
       <property name="text">
@@ -219,7 +265,7 @@
      </item>
     </widget>
    </item>
-   <item row="5" column="1" colspan="3">
+   <item row="7" column="1" colspan="3">
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <property name="spacing">
       <number>6</number>
@@ -256,7 +302,7 @@
      </item>
     </layout>
    </item>
-   <item row="14" column="0">
+   <item row="17" column="0">
     <widget class="QLabel" name="label_19">
      <property name="text">
       <string>Simulator capture folder</string>
@@ -276,7 +322,7 @@
      </property>
     </widget>
    </item>
-   <item row="29" column="4">
+   <item row="32" column="4">
     <widget class="QComboBox" name="channelorderCB">
      <property name="sizePolicy">
       <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
@@ -420,7 +466,7 @@ This is used by the templated to determine which channel goes to what number out
      </item>
     </widget>
    </item>
-   <item row="5" column="0">
+   <item row="7" column="0">
     <widget class="QLabel" name="label_8">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
@@ -433,35 +479,7 @@ This is used by the templated to determine which channel goes to what number out
      </property>
     </widget>
    </item>
-   <item row="33" column="1" colspan="4">
-    <layout class="QHBoxLayout" name="horizontalLayout">
-     <item>
-      <widget class="QCheckBox" name="joystickChkB">
-       <property name="text">
-        <string>Enable</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QComboBox" name="joystickCB">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="joystickcalButton">
-       <property name="text">
-        <string>Calibrate</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </item>
-   <item row="11" column="1" colspan="3">
+   <item row="13" column="1" colspan="3">
     <layout class="QGridLayout" name="gridLayout_2">
      <property name="verticalSpacing">
       <number>1</number>
@@ -485,7 +503,7 @@ This is used by the templated to determine which channel goes to what number out
      </item>
     </layout>
    </item>
-   <item row="22" column="1" colspan="4">
+   <item row="25" column="1" colspan="4">
     <layout class="QHBoxLayout" name="horizontalLayout_5">
      <item>
       <widget class="QLabel" name="FwInfo">
@@ -509,7 +527,7 @@ This is used by the templated to determine which channel goes to what number out
      </item>
     </layout>
    </item>
-   <item row="11" column="0">
+   <item row="13" column="0">
     <widget class="QLabel" name="label_9">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
@@ -522,7 +540,7 @@ This is used by the templated to determine which channel goes to what number out
      </property>
     </widget>
    </item>
-   <item row="35" column="0" colspan="5">
+   <item row="38" column="0" colspan="5">
     <layout class="QHBoxLayout" name="horizontalLayout_3">
      <item>
       <spacer name="horizontalSpacer_3">
@@ -565,7 +583,7 @@ This is used by the templated to determine which channel goes to what number out
      </item>
     </layout>
    </item>
-   <item row="24" column="1" colspan="4">
+   <item row="27" column="1" colspan="4">
     <layout class="QHBoxLayout" name="horizontalLayout_6" stretch="1,0">
      <item>
       <widget class="QLabel" name="label_12">
@@ -592,7 +610,7 @@ This is used by the templated to determine which channel goes to what number out
      </item>
     </layout>
    </item>
-   <item row="30" column="1" colspan="4">
+   <item row="33" column="1" colspan="4">
     <layout class="QGridLayout" name="gridLayout_6" columnstretch="0,0,1,0,0">
      <item row="1" column="4">
       <widget class="QPushButton" name="export_PB">
@@ -640,7 +658,7 @@ This is used by the templated to determine which channel goes to what number out
      </item>
     </layout>
    </item>
-   <item row="14" column="1" colspan="4">
+   <item row="17" column="1" colspan="4">
     <layout class="QGridLayout" name="gridLayout_8">
      <property name="verticalSpacing">
       <number>1</number>
@@ -671,7 +689,7 @@ This is used by the templated to determine which channel goes to what number out
      </item>
     </layout>
    </item>
-   <item row="29" column="0">
+   <item row="32" column="0">
     <widget class="QLabel" name="label_14">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
@@ -684,7 +702,7 @@ This is used by the templated to determine which channel goes to what number out
      </property>
     </widget>
    </item>
-   <item row="29" column="3">
+   <item row="32" column="3">
     <widget class="QLabel" name="label_13">
      <property name="sizePolicy">
       <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
@@ -700,7 +718,7 @@ This is used by the templated to determine which channel goes to what number out
      </property>
     </widget>
    </item>
-   <item row="29" column="1" colspan="2">
+   <item row="32" column="1" colspan="2">
     <widget class="QComboBox" name="stickmodeCB">
      <property name="whatsThis">
       <string>Mode selection:
@@ -749,58 +767,13 @@ Mode 4:
     </widget>
    </item>
    <item row="33" column="0">
-    <widget class="QLabel" name="label_11">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="MinimumExpanding" vsizetype="Minimum">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="text">
-      <string>Joystick</string>
-     </property>
-    </widget>
-   </item>
-   <item row="30" column="0">
     <widget class="QLabel" name="label_15">
      <property name="text">
       <string>Profile slot</string>
      </property>
     </widget>
    </item>
-   <item row="17" column="0">
-    <widget class="QLabel" name="label_17">
-     <property name="text">
-      <string>Automatic Backup Folder</string>
-     </property>
-    </widget>
-   </item>
-   <item row="17" column="1" colspan="4">
-    <layout class="QHBoxLayout" name="horizontalLayout_10">
-     <item>
-      <widget class="QLineEdit" name="backupPath">
-       <property name="readOnly">
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="backupPathButton">
-       <property name="text">
-        <string>Open Folder</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QCheckBox" name="backupEnable">
-       <property name="text">
-        <string>auto backup before write</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </item>
-   <item row="25" column="1" colspan="4">
+   <item row="28" column="1" colspan="4">
     <spacer name="verticalSpacer">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -816,7 +789,7 @@ Mode 4:
      </property>
     </spacer>
    </item>
-   <item row="23" column="1" colspan="4">
+   <item row="26" column="1" colspan="4">
     <layout class="QHBoxLayout" name="horizontalLayout_11" stretch="1,0">
      <item>
       <widget class="QLabel" name="label_18">
@@ -843,7 +816,7 @@ Mode 4:
      </item>
     </layout>
    </item>
-   <item row="19" column="1" colspan="4">
+   <item row="22" column="1" colspan="4">
     <layout class="QGridLayout" name="gridLayout_5" columnstretch="1,0,0,0,0">
      <property name="sizeConstraint">
       <enum>QLayout::SetMaximumSize</enum>
@@ -934,7 +907,7 @@ May be different from firmware language</string>
      </item>
     </layout>
    </item>
-   <item row="19" column="0">
+   <item row="22" column="0">
     <layout class="QGridLayout" name="gridLayout_7">
      <item row="0" column="0">
       <widget class="QLabel" name="label_6">
@@ -987,14 +960,14 @@ May be different from firmware language</string>
      </property>
     </widget>
    </item>
-   <item row="15" column="0" colspan="5">
+   <item row="18" column="0" colspan="5">
     <widget class="Line" name="line_2">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
     </widget>
    </item>
-   <item row="21" column="1" colspan="4">
+   <item row="24" column="1" colspan="4">
     <layout class="QGridLayout" name="gridLayout" columnstretch="0,0,0,0,0,0">
      <property name="sizeConstraint">
       <enum>QLayout::SetMaximumSize</enum>
@@ -1547,45 +1520,7 @@ May be different from firmware language</string>
      </item>
     </layout>
    </item>
-   <item row="18" column="1" colspan="4">
-    <layout class="QHBoxLayout" name="ge_layout">
-     <item>
-      <widget class="QLineEdit" name="ge_lineedit">
-       <property name="readOnly">
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="ge_pathButton">
-       <property name="text">
-        <string>Find Executable</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </item>
-   <item row="18" column="0">
-    <widget class="QLabel" name="ge_label">
-     <property name="text">
-      <string>Google Earth Executable</string>
-     </property>
-    </widget>
-   </item>
-   <item row="3" column="0">
-    <widget class="QLabel" name="label_4">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="text">
-      <string>Show Splash At Start</string>
-     </property>
-    </widget>
-   </item>
-   <item row="8" column="0">
+   <item row="10" column="0">
     <widget class="QLabel" name="label_10">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
@@ -1598,7 +1533,7 @@ May be different from firmware language</string>
      </property>
     </widget>
    </item>
-   <item row="8" column="1" colspan="3">
+   <item row="10" column="1" colspan="3">
     <widget class="QComboBox" name="splashincludeCB">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
@@ -1618,17 +1553,10 @@ May be different from firmware language</string>
      </item>
     </widget>
    </item>
-   <item row="3" column="1" colspan="4">
+   <item row="0" column="1" colspan="4">
     <layout class="QHBoxLayout" name="horizontalLayout_8">
      <item>
-      <widget class="QCheckBox" name="showSplash">
-       <property name="text">
-        <string/>
-       </property>
-       <property name="checked">
-        <bool>true</bool>
-       </property>
-      </widget>
+      <widget class="QComboBox" name="locale_QB"/>
      </item>
      <item>
       <spacer name="horizontalSpacer">
@@ -1645,6 +1573,9 @@ May be different from firmware language</string>
      </item>
      <item>
       <widget class="QLabel" name="label_7">
+       <property name="toolTip">
+        <string/>
+       </property>
        <property name="text">
         <string>Theme</string>
        </property>
@@ -1652,6 +1583,9 @@ May be different from firmware language</string>
      </item>
      <item>
       <widget class="QComboBox" name="theme_CB">
+       <property name="toolTip">
+        <string>Requires restart</string>
+       </property>
        <item>
         <property name="text">
          <string>Classic</string>
@@ -1682,6 +1616,9 @@ May be different from firmware language</string>
      </item>
      <item>
       <widget class="QLabel" name="label_2">
+       <property name="toolTip">
+        <string/>
+       </property>
        <property name="text">
         <string>Icon  size</string>
        </property>
@@ -1689,6 +1626,9 @@ May be different from firmware language</string>
      </item>
      <item>
       <widget class="QComboBox" name="iconSize_CB">
+       <property name="toolTip">
+        <string>Requires restart</string>
+       </property>
        <item>
         <property name="text">
          <string>Small</string>
@@ -1713,10 +1653,94 @@ May be different from firmware language</string>
      </item>
     </layout>
    </item>
+   <item row="1" column="1" colspan="4">
+    <layout class="QHBoxLayout" name="horizontalLayout_7" stretch="0,0,0,0">
+     <item>
+      <widget class="QCheckBox" name="showSplash">
+       <property name="text">
+        <string/>
+       </property>
+       <property name="checked">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer name="horizontalSpacer_6">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QCheckBox" name="startupCheck_companion9x">
+       <property name="text">
+        <string>Check for updates on startup</string>
+       </property>
+       <property name="checked">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QCheckBox" name="startupCheck_fw">
+       <property name="text">
+        <string>Check for selected Fw updates</string>
+       </property>
+       <property name="checked">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item row="16" column="0">
+    <widget class="QLabel" name="label_11">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="MinimumExpanding" vsizetype="Minimum">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="text">
+      <string>Joystick</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="0">
+    <widget class="QLabel" name="ge_label">
+     <property name="text">
+      <string>Google Earth Executable</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="1" colspan="4">
+    <layout class="QHBoxLayout" name="ge_layout">
+     <item>
+      <widget class="QLineEdit" name="ge_lineedit">
+       <property name="readOnly">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="ge_pathButton">
+       <property name="text">
+        <string>Find Executable</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
   </layout>
  </widget>
  <tabstops>
-  <tabstop>locale_QB</tabstop>
   <tabstop>InvertPixels</tabstop>
   <tabstop>clearImageButton</tabstop>
   <tabstop>SplashFileName</tabstop>
