The failsafe frame was displayed even when the radio was not a Taranis

--- a/companion/src/modeledit/setup_module.ui
+++ b/companion/src/modeledit/setup_module.ui
@@ -443,7 +443,7 @@
        </widget>
       </item>
       <item row="7" column="0" alignment="Qt::AlignRight">
-       <widget class="QLabel" name="label_failsafeFrame">
+       <widget class="QLabel" name="failsafesLayoutLabel">
         <property name="maximumSize">
          <size>
           <width>16777215</width>
